Move recipe card iteration to partials. Add flip cards to profile. Add no-cache in turbolinks for profile page to avoid flickering due to js toggle in tabs

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -48,7 +48,7 @@
   h6 {
     text-align: center;
     text-shadow: 0px 0px 2px rgba(0,0,0,0.6);
-    color: rgb(240, 240, 240);
+    color: $white;
     text-decoration: none;
     margin: 0 auto;
     padding: 0;
@@ -57,7 +57,7 @@
 
 // Recipe Cards - Back
 .flip-card-back {
-  color: #FFF;
+  color: $white;
   font-size: 12px;
   text-align: left;
   padding: 20px 0px;
@@ -86,25 +86,13 @@
   text-align: center;
 }
 
-.card-index h6 {
+.recipe-card h6 {
   font-size: 26px;
   width: 190px;
 }
 
-// Cards - Profile
-.card-profile {
-  width: 170px;
-  height: 130px;
-  margin: 0 0 16px 0;
-  position: relative;
-}
-
-.card-profile h6 {
-  width: 160px;
-  font-size: 20px;
-}
-
 .favourited_indicator {
+  color: $white;
   position: absolute;
   bottom: 3px;
   right: 6px;
@@ -113,10 +101,12 @@
 
 // Media queries
 @media screen and (max-width:500px) {
-  .card-index, .card-profile {
+  .flip-card {
     width: 250px;
     height: 200px;
-    margin-bottom: 5%;
+    margin: 7% auto;
+  }
+  .recipe-card {
     text-align: center;
     h6 {
       width: 240px;
@@ -124,11 +114,8 @@
     }
   }
 
-  .card-index {
-    margin-top: 5%;
-  }
-
-  .card-profile {
-    margin-top: 0;
+  .info-recipe-card-sm {
+    margin: 16px;
+    min-width: 40px;
   }
 }
