--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,8 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$white: #ebebeb;
 
-$very-dark-brown: rgb(31,20,9);
+$very-dark-brown: #1f1409;
 $soft-black: #292929;
 
 // Blue shades
